# expcomb

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run_black.sh  run_flake8.sh  run_mypy.sh  setup.cfg  tox.ini
expcomb/: cmd.py  doc_utils.py  filter.py  models.py  score.py  table.py  utils.py
expcomb/sigtest/: bootstrap.py  cmd.py  disp.py
expcomb/table/: cmd.py  print.py  spec.py  utils.py
