[metadata]
description-file = README.md

[flake8]
max-line-length = 88
select = C,E,F,W,B
ignore = E501,W503,E203

[mypy-plumbum.*]
ignore_missing_imports = True

[mypy-tinyrecord.*]
ignore_missing_imports = True

[mypy-tinydb.*]
ignore_missing_imports = True

[mypy-pylatex.*]
ignore_missing_imports = True
